--- a/akr.WPF.Controls.ColorPicker/ColorPicker.xaml
+++ b/akr.WPF.Controls.ColorPicker/ColorPicker.xaml
@@ -111,7 +111,7 @@
         </StackPanel>
         <Viewbox Margin="0,10,0,0">
             <Grid Width="220" Height="220">
-                <Canvas Width="220" Height="220" Name="CircleCanvas" MouseLeftButtonDown="CircleCanvas_MouseLeftButtonDown" MouseMove="CircleCanvas_MouseMove" MouseLeftButtonUp="CircleCanvas_MouseLeftButtonUp">
+                <Canvas Width="220" Height="220" Name="CircleCanvas" MouseLeftButtonDown="CircleCanvas_MouseLeftButtonDown" MouseMove="CircleCanvas_MouseMove" MouseLeftButtonUp="CircleCanvas_MouseLeftButtonUp" SizeChanged="CircleCanvas_SizeChanged">
                     <local:CirclePanel x:Name="panel" Width="220" Height="220" />
                     <Canvas Name="ColorCircleSelector"
                             Width="22"
